--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
   </head>
   <body>
     <h1>Salom bu meni birnchi saytim</h1>
+    <p>Meni ismim Aziz</p>
+    <p>qiziqishlarim:</p>
+    <ul>
+      <li>Ping-Pong</li>
+      <li>Gaming</li>
+      <li>Coding</li>
+    </ul>
     <img
       class="hacker"
       src="https://cdn.metatime.com/landing/blog/1686575019blobid0.jpg"
