--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Salom bu meni birnchi saytim</h1>
-    <p>Meni ismim Aziz</p>
+    <p>Meni ismim Muxammad</p>
     <p>qiziqishlarim:</p>
     <ul>
       <li>Ping-Pong</li>
@@ -20,5 +20,12 @@
       src="https://cdn.metatime.com/landing/blog/1686575019blobid0.jpg"
       alt=""
     />
+
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla debitis
+      sed voluptates nemo nam illo ullam quis veritatis reiciendis inventore
+      atque molestias ad reprehenderit eos incidunt voluptas, vero eligendi
+      laudantium!
+    </p>
   </body>
 </html>
