ismimni ibrohim qildimm

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Salom bu meni birnchi saytim</h1>
-    <p>Meni ismim Muxammad</p>
+    <p>Meni ismim Ibrohim</p>
     <p>qiziqishlarim:</p>
     <ul>
       <li>Ping-Pong</li>
